--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ENV=DEVELOPMENT
-DATABASE=mongodb+srv://ali:ali@cluster0.5ijaz.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+DATABASE=mongodb+srv://ali:ali@cluster0.5ijaz.mongodb.net/coseydb?retryWrites=true&w=majority
 
 SALT=ksjdfiwejiesldcl
 SECRET=dskfjslkdjfm2
