--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "dev": "nodemon"
+    
+    "start": "nodemon"
   },
   "keywords": [],
   "author": "",
